syntax = "proto3";// 协议为proto3


package proto;
//option go_package = "grpc/03serverStream/proto";
option go_package = "./;proto";

//  protoc --go_out=plugins=grpc:./ .\serverStream.proto
// 定义我们的服务（可定义多个服务,每个服务可定义多个接口）
service StreamServer{
  // 服务端流式rpc，在响应数据前添加stream
  rpc ListValue(SimpleRequest) returns (stream StreamResponse){};
}

// 定义发送请求信息
message SimpleRequest{
  // 定义发送的参数，采用驼峰命名方式，小写加下划线，如：student_name
  // 请求参数
  string data = 1;
}

// 定义流式响应信息
message StreamResponse{
  // 流式响应数据
  string stream_value = 1;
}
